Add new response entity for user all
