# services/auth/docs/swagger.json
@@ -178,20 +178,19 @@
                 "summary": "Get users",
                 "parameters": [
                     {
-                        "maximum": 100,
                         "minimum": 1,
                         "type": "integer",
-                        "default": 20,
-                        "description": "Limit",
-                        "name": "limit",
+                        "default": 1,
+                        "description": "Page",
+                        "name": "page",
                         "in": "query"
                     },
                     {
                         "minimum": 0,
                         "type": "integer",
-                        "default": 0,
-                        "description": "Offset",
-                        "name": "offset",
+                        "default": 100,
+                        "description": "Limit",
+                        "name": "limit",
                         "in": "query"
                     }
                 ],
@@ -199,7 +198,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.User"
+                            "$ref": "#/definitions/response.UserList"
                         }
                     },
                     "401": {
@@ -551,6 +550,35 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "response.UserList": {
+            "type": "object",
+            "properties": {
+                "current_page": {
+                    "type": "integer"
+                },
+                "has_next_page": {
+                    "type": "boolean"
+                },
+                "has_prev_page": {
+                    "type": "boolean"
+                },
+                "limit": {
+                    "type": "integer"
+                },
+                "total_page_count": {
+                    "type": "integer"
+                },
+                "total_users_count": {
+                    "type": "integer"
+                },
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.User"
+                    }
                 }
             }
         }
